--- a/commands.tex
+++ b/commands.tex
@@ -16,9 +16,9 @@
 	urlcolor=black,
 	filecolor=black,
 	menucolor=black,
-	pdftitle={Bachelorarbeit},
+	pdftitle={Masters Thesis},
 	pdfauthor={Henry Bathke},
-	pdfsubject={Bachelorarbeit SS2016},
+	pdfsubject={Masters Thesis Design and Implementation of an LDPC-based FEC encoder/decoder suitable for Storage devices},
 	]{hyperref}
 \usepackage{amsmath}
 \usepackage[english,nameinlink,noabbrev]{cleveref}
