--- a/database.bib
+++ b/database.bib
@@ -121,7 +121,8 @@
 }
 @manual{ETSI_EN_302_307,
     organization = {ETSI},
-    title = {Digital Video Broadcasting (DVB); Second generation framing structure, channel coding and modulation systems for Broadcasting, Interactive Services, News Gathering and other broadband satellite applications (DVB-S2)},
+    title = {Digital Video Broadcasting (DVB); Second generation framing structure, channelIn: ().
+M. Tanner. “A recursive approach to low complexity codes”. In coding and modulation systems for Broadcasting, Interactive Services, News Gathering and other broadband satellite applications (DVB-S2)},
     number = {ETSI EN 302 307},
     year = {2009},
     month = {August},
@@ -159,3 +160,4 @@
     month = {May},
     url = {http://cas.ee.ic.ac.uk/people/dt10/research/rngs-fpga-normal.html}
 } 
+  
