--- a/test.tex
+++ b/test.tex
@@ -4,7 +4,7 @@
 \usepackage{pgfplots}
 \usetikzlibrary{shapes, arrows.meta, positioning, decorations.pathmorphing, math, calc, fit, chains, matrix, decorations.pathreplacing, decorations.markings}
 
-
+\pgfplotsset{compat=1.16}
 \begin{document}
-test document
+
 \end{document}
