--- a/test.tex
+++ b/test.tex
@@ -1,10 +1,14 @@
 \documentclass[border=1cm]{standalone}
 
 \usepackage{tikz}
+\usepackage{amsmath}
 \usepackage{pgfplots}
+\usepackage{gensymb}
+\usepackage{bm}
+\usepackage{amssymb}
 \usetikzlibrary{shapes, arrows.meta, positioning, decorations.pathmorphing, math, calc, fit, chains, matrix, decorations.pathreplacing, decorations.markings}
 
-\pgfplotsset{compat=1.16}
+\pgfplotsset{compat=1.15}
 \begin{document}
 
 \end{document}
